feat: add MonthlySummaryResponse and PlanSummary models for monthly and plan summaries